<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sketch Pen</string>
    <string name="alert_reset_image_title">Reset Image</string>
    <string name="dialogue_scanning_media_title">Scanning Media</string>
    <string name="dialogue_scanning_media_body">Please wait&#8230;</string>
    <string name="toast_scanning_media_not_found">No saved image found</string>
    <string name="share_image_text">This image is generated by Sketch Pen.\nA free and light weight Android application.\nPlease visit below link to install&#8230;\n\nhttp://play.google.com/store/apps/details?id=com.devdroid.sketchpen</string>
    <string name="chooser_share_title">Share</string>
    <string name="toast_save_image_error">Error occurred during saving image</string>
    <string name="toast_save_image_success">Image saved</string>

    <string name="action_settings">Settings</string>
    <string name="label_forecolor">Stroke Color</string>
    <string name="label_show_circle">Show circle</string>
    <string name="label_backcolor">Background</string>
    <string name="label_default_size">12</string>
    <string name="button_label_default">Reset settings</string>

    <string name="alert_rate_title">Rate this app</string>
    <string name="alert_rate_body">Do you want to rate this app?</string>

    <string name="msg_close_app">Press again to exit</string>

    <string name="action_insert_image">Insert Image</string>


    <!-- Slider menu start  -->
    <string name="action_rate">Rating and review</string>
    <string name="action_eraser">Eraser</string>
    <string name="eraser_active">Active</string>
    <string name="eraser_inactive">Inactive</string>
    <string name="toast_message_file_not_found">No saved image is found</string>
    <string name="label_stroke_size">Stroke Size</string>
    <string name="label_eraser_size">Eraser Size</string>
    <string name="label_default_eraser_size">12</string>

    <string name="action_buy_ad_free">Buy Ad free</string>

    <string name="action_visit_sketchpen">Visit Sketch Pen</string>
    <string name="label_message_eraser">Choose this option again to disable eraser</string>

    <string name="msg_external_storage_error">Try to select image from phone/external memory</string>
    <string name="msg_general_error">This action is not supported by your device</string>

    <string name="label_reset_foreground">Reset foreground only</string>
    <string name="label_reset_background">Reset background only</string>
    <string name="label_reset_all">Reset all</string>

    <string name="action_enable_eraser">Enable eraser</string>
    <string name="action_disable_eraser">Disable eraser</string>
    <string name="label_message_eraser_on">Eraser ON</string>
    <string name="label_message_eraser_off">Eraser OFF</string>
    <string name="label_message_fullscreen_eraser_on">Eraser will not work in fullscreen mode</string>

    <string name="msg_payment_canceled">You canceled the payment</string>
    <string name="msg_payment_refunded">Payment failed, it will be refunded if paid</string>
    <string name="msg_payment_done">Payment done successfully, Thank you!</string>
    <string name="action_about">About</string>
    <string name="title_welldone">Well done!\nStart scribble now</string>

    <string name="action_save_image">Save Image</string>
    <string name="action_view_image">My Sketches</string>

    <string name="action_fullscreen">Full Screen</string>
    <string name="action_reset">Reset</string>
    <string name="action_save_and_share_image">Share</string>
    <string name="label_change_color">Change Color</string>

    <string name="action_fb_post">Post on Wall</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_share_sketchpen">Tell Your Friends</string>

    <string name="facebook_app_id">792406584220842</string>
    <string name="admob_app_id">ca-app-pub-1782443214800184~9502764956</string>
    <string name="fb_login_protocol_scheme">fb792406584220842</string>
    <string name="default_notification_channel_id">sketchpen-c67cf</string>
</resources>