<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SketchPenActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true" />

    <HorizontalScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_bg"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/custom_toolbar_sketchpen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_fullscreen"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_fullscreen">

                <ImageView
                    android:id="@+id/img_fullscreen"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_full_screen" />

                <TextView
                    android:id="@+id/txt_fullscreen"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_fullscreen" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_stroke_size"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/label_stroke_size">

                <ImageView
                    android:id="@+id/img_stroke_size"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_size" />

                <TextView
                    android:id="@+id/txt_stroke_size"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/label_stroke_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_eraser"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/label_message_eraser_off">

                <ImageView
                    android:id="@+id/img_eraser"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_eraser_state_off" />

                <TextView
                    android:id="@+id/txt_eraser"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/label_message_eraser_off" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_color"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/label_change_color">

                <ImageView
                    android:id="@+id/img_color"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_stroke_color" />

                <TextView
                    android:id="@+id/txt_color"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/label_forecolor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_bg_color"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/label_change_color">

                <ImageView
                    android:id="@+id/img_bg_color"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_back_color" />

                <TextView
                    android:id="@+id/txt_bg_color"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/label_backcolor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_view_image"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_view_image">

                <ImageView
                    android:id="@+id/img_view_image"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_picture" />

                <TextView
                    android:id="@+id/txt_view_image"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_view_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_insert_image"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_insert_image">

                <ImageView
                    android:id="@+id/img_insert_image"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_new_picture" />

                <TextView
                    android:id="@+id/txt_view_insert_image"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_insert_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_save_image"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_save_image">

                <ImageView
                    android:id="@+id/img_save_image"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_save" />

                <TextView
                    android:id="@+id/txt_save_image"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_save_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_share"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_save_and_share_image">

                <ImageView
                    android:id="@+id/img_share"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_share" />

                <TextView
                    android:id="@+id/txt_share"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_save_and_share_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_reset"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_reset">

                <ImageView
                    android:id="@+id/img_reset"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_action_refresh" />

                <TextView
                    android:id="@+id/txt_reset"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_reset" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_fb_post"
                style="@style/ToolbarButtonStyle"
                android:foreground="?attr/selectableItemBackground"
                android:tag="@string/action_fb_post">

                <ImageView
                    android:id="@+id/img_test"
                    style="@style/ToolbarImageStyle"
                    android:src="@drawable/ic_fb_post" />

                <TextView
                    android:id="@+id/txt_test"
                    style="@style/ToolbarTextStyle"
                    android:text="@string/action_fb_post" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/card_show_toolbar"
        android:layout_width="@dimen/fullscreen_button_size"
        android:layout_height="@dimen/fullscreen_button_size"
        android:layout_margin="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="showToolbar"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/ic_action_settings" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
